# local-fusion-gateway

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.benchmark.local-tiny.example.yaml  config.example.yaml  config.gemini.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: policy-ja.md  vastai-diffusiongemma-int8-ja.md
scripts/: benchmark_gsm8k_local.py  smoke_gemini.py
src/local_fusion_gateway/: __init__.py  app.py  client.py  config.py  fusion.py  main.py  schemas.py
tests/: test_benchmark_gsm8k_local.py  test_config.py  test_fusion.py  test_health.py  test_proxy.py
