[project]
name = "local-fusion-gateway"
version = "0.1.0"
description = "OpenAI-compatible local Fusion gateway for local LLM backends."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Hayato Harada" },
]
keywords = [
    "ai",
    "fastapi",
    "fusion",
    "llm",
    "local-llm",
    "openai-compatible",
    "openrouter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[project.scripts]
local-fusion-gateway = "local_fusion_gateway.main:main"

[project.urls]
Homepage = "https://github.com/perro1214/local-fusion-gateway"
Repository = "https://github.com/perro1214/local-fusion-gateway"
Issues = "https://github.com/perro1214/local-fusion-gateway/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_fusion_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
